--- a/Task-9/style.css
+++ b/Task-9/style.css
@@ -19,6 +19,7 @@ input{
     display: flex;
     gap:20px;
     flex-wrap: wrap;
+    
 }
 .img{
     margin-top: 4px;
@@ -40,6 +41,6 @@ object-fit:cover ;
 
 }
 h5{
-    margin-top:0;
+    margin-top:5px;
     width: fit-content;
 }
